plugins {
    id 'java'
    id 'io.quarkus'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'io.quarkus:quarkus-awt'
    implementation 'io.quarkus:quarkus-rest-links'
    implementation 'io.quarkus:quarkus-oidc'
    implementation 'io.quarkus:quarkus-hibernate-validator'
    implementation 'io.quarkiverse.amazonservices:quarkus-amazon-s3'
    implementation 'software.amazon.awssdk:url-connection-client'
    implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-amazon-services-bom:${quarkusPlatformVersion}")
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-amazon-lambda-rest'
    implementation 'io.quarkus:quarkus-mongodb-panache'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-config-yaml'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'

    implementation 'net.coobird:thumbnailator:0.4.20'
    implementation 'org.jodd:jodd-util:6.2.2'
    implementation 'com.madgag:animated-gif-lib:1.4'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.rest-assured:rest-assured'
    testImplementation 'io.quarkus:quarkus-junit5-mockito'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    testImplementation "io.quarkus:quarkus-test-security"

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
}

group 'com.benhession'
version '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

checkstyle {
    toolVersion = '10.12.1'
    ignoreFailures = false
    maxWarnings = 0

    configProperties = [
            "org.checkstyle.google.suppressionfilter.config":
                    "${projectDir}/config/checkstyle/suppressions.xml",
    ]
}
